--- a/src/index.ejs
+++ b/src/index.ejs
@@ -68,7 +68,9 @@
   <% } %>
 </head>
 <body>
-  <main></main>
+  <main>
+    <P>Electron App</P>
+  </main>
   <script>
     System.import('@Electron/root-config');
   </script>
